Refactor Consoles.