@@ -7,8 +7,6 @@ import org.javid.model.Employee;
 import org.javid.service.EmployeeService;
 import org.javid.util.Screen;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -25,14 +23,12 @@ public class EmployeeConsole extends PersonConsole<Employee, EmployeeService> {
 
     @Override
     public void userMenu() {
-        List<String> list = Arrays.asList("Add Course", "Delete Course", "Edit Course");
-
         if ("admin".equals(currentUser.getUsername())) {
             adminMenu();
         } else {
             while (true) {
                 try {
-                    int choice = Screen.showMenu("Exit", Collections.singletonList("See salary"));
+                    var choice = Screen.showMenu("Exit", List.of("See salary"));
                     if (choice == 0) {
                         currentUser = null;
                         break;
@@ -49,8 +45,10 @@ public class EmployeeConsole extends PersonConsole<Employee, EmployeeService> {
     private void adminMenu() {
         while (true) {
             try {
-                int choice = Screen.showMenu("Exit", Arrays.asList("Manage Employee", "Manage Professor"
+                var choice = Screen.showMenu("Exit", List.of(
+                        "Manage Employee", "Manage Professor"
                         , "Manage Student", "Manage Course"));
+
                 if (choice == 0) {
                     currentUser = null;
                     break;
@@ -79,7 +77,8 @@ public class EmployeeConsole extends PersonConsole<Employee, EmployeeService> {
     public void manage() {
         while (true) {
             try {
-                int choice = Screen.showMenu("Exit", Arrays.asList("Add Employee", "Delete Employee", "Edit Employee"));
+                var choice = Screen.showMenu("Exit", List.of(
+                        "Add Employee", "Delete Employee", "Edit Employee"));
 
                 if (choice == 0)
                     break;
@@ -102,70 +101,43 @@ public class EmployeeConsole extends PersonConsole<Employee, EmployeeService> {
     }
 
     private void saveEmployee() {
-        Employee employee = save();
+        var employee = save();
         if (employee != null && Application.confirmMenu("Save employee") > 0) {
-            System.out.println(service.save(employee) != null ?
-                    "Employee saved successfully." :
-                    "Failed to save employee!");
+            service.save(employee);
+            System.out.println(employee.isNew() ?
+                    "Failed to save employee!" :
+                    "Employee saved successfully.");
         }
     }
 
     @Override
     public Employee save() {
-        Employee employee = super.save();
+        var employee = super.save();
         return employee == null ? null
                 : employee.setSalary(Screen.getLong("Salary: "));
     }
 
+    @Override
     public Employee select(String message) {
         return select(message, service.findAll().stream()
                 .filter(employee -> !"admin".equals(employee.getUsername()))
                 .collect(Collectors.toList()));
     }
 
-    public Employee select(String message, List<Employee> employees) {
-        List<String> items = employees.stream()
-                .map(Employee::toString)
-                .collect(Collectors.toList());
-
-        int choice = Screen.showMenu(message, "Cancel", items);
-        if (choice == 0) {
-            return new Employee();
-        }
-
-        return employees.get(choice - 1);
-    }
-
     public void delete() {
-        Employee employee = select("Select employee to delete: ");
-        if (employee.isNew())
+        var employee = select("Select employee to delete: ");
+        if (employee == null)
             return;
         service.deleteById(employee.getId());
         System.out.println("Employee deleted.");
     }
 
     private void update() {
-        Employee employee = select("Select employee to update: ");
-        if (employee.isNew())
+        var employee = super.update("Select employee to update: ");
+        if (employee == null)
             return;
 
-        String password = Screen.getString("Enter - or new password: ");
-        if (Application.isForUpdate(password))
-            employee.setPassword(password);
-
-        String firstname = Screen.getString("Enter - or new firstname: ");
-        if (Application.isForUpdate(firstname))
-            employee.setFirstname(firstname);
-
-        String lastname = Screen.getString("Enter - or new lastname: ");
-        if (Application.isForUpdate(lastname))
-            employee.setLastname(lastname);
-
-        long nationalCode = Screen.getLong("Enter -1 or new national code: ");
-        if (nationalCode >= 0)
-            employee.setNationalCode(nationalCode);
-
-        long salary = Screen.getLong("Enter -1 or new salary: ");
+        var salary = Screen.getLong("Enter -1 or new salary: ");
         if (salary >= 0)
             employee.setSalary(salary);
 
